OO-5066: find an administrator to delete resource in the name of